fixed errors in overflow and colour

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ header nav a {
 }
 
 nav a:hover {
-  color: #A94CAF;
+  color: #a94caf;
 }
 
 img {
@@ -70,6 +70,7 @@ img {
   position: relative;
   margin: 0;
   max-height: 75vh;
+  overflow: hidden;
 }
 
 figure {
@@ -89,7 +90,7 @@ h2 {
   font: normal 100%/1.5 Lobster, sans-serif;
   font-size: 2rem;
   text-align: center;
-  margin: 0 .5em 0;
+  margin: 0 .5em;
   padding: 1.5rem;
 }
 
@@ -288,6 +289,7 @@ footer {
   .info {
     float: left;
     width: 49%;
+  }
 
 }
 
